--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 					<!-- Collect the nav links, forms, and other content for toggling -->
 					<section id="links1">
-						<ul class="nav navbar-nav navbar-right">
+						<ul class="nav navbar-nav navbar-center">
 							<li><a href="index.html">About</a> </li>
 							<li><a href="portfolio.html">Portfolio</a></li>
 							<li><a href="contact.html">Contact</a></li>
@@ -93,7 +93,7 @@
 
 	<div class="row">
 		<div class="col-xs-12">
-			<div id="hr4">
+			<div id="hr4"></div>
 		</div>
 	</div>
 
