--- a/contact.html
+++ b/contact.html
@@ -2,83 +2,107 @@
 <html>
 <head>
 	<title>Contact</title>
-	<!-- <link rel="stylesheet" type="text/css" href="resetCSS.css"> -->
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="css/resetCSS.css">
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 	
-	<div class="header">
-		<div id="name">
-			Trent Cooper
-		</div>
-		<div id="links1">
-			<ul>
-				<li><a href="index.html">About</a> </li>
-				<li>   |   </li>
-				<li><a href="portfolio.html">Portfolio</a></li>
-				<li>   |   </li>
-				<li><a href="contact.html">Contact</a></li>
-			</ul>
+	<!-- First Row -->
+	<div class="row">
+		<!-- First (and only column) -->
+		<div class="col-md-12">
+			<nav class="navbar navbar-default navbar-fixed-top">
+				<div id="header">
+					<div id="name">
+						<!-- Brand and toggle get grouped for better mobile display -->
+						<div class="navbar-header">
+							<a class="navbar-brand" href="#">Trent Cooper</a>
+						</div>
+					</div>
+
+					<!-- Collect the nav links, forms, and other content for toggling -->
+					<section id="links1">
+						<ul class="nav navbar-nav navbar-right">
+							<li><a href="index.html">About</a> </li>
+							<li><a href="portfolio.html">Portfolio</a></li>
+							<li><a href="contact.html">Contact</a></li>
+						</ul>
+					</section>
+				</div><!-- /.container -->
+			</nav>
 		</div>
 	</div>
 
 	<hr id="hr1">
 
 	<div class="container">
-		<section id="contact">
-			<h1 id="contact-title">Contact</h1>
-
-			<hr id="hr2">
-			
-			<form action="/action_page.php">
-				Name:<br>
-				<input type="text" name="name" value="Jane Doe">
+		<!-- First Row -->
+		<div class="row">
+			<!-- First (and only column) -->
+      		<div class="col-md-6">
+      			<br>
+				<br>	
 				<br>
-				<br>Email:<br>
-				<input type="text" name="email" value="example@gmail.com">
 				<br>
-				<br>Message:<br>
-				<textarea name="message" rows="15" cols="60"></textarea> <br>
-				<input type="button" value="Submit">
-			</form> 
+				<br>
+				<section id="contact">
+					<h1 id="contact-title">Contact</h1>
 
+					<hr id="hr2">
+				
+					<form>
+						<div class="form-group">
+							<label for="exampleTextarea">Name</label>
+							<textarea class="form-control" placeholder="Jane Doe" id="exampleTextarea" rows="1"></textarea>
+						</div>
+						<div class="form-group">
+							<label for="exampleInputEmail1">Email address</label>
+							<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+							<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+						</div>
+						<div class="form-group">
+							<label for="exampleTextarea">Message</label>
+							<textarea class="form-control" id="exampleTextarea" rows="6"></textarea>
+						</div>
+						<button type="submit" class="btn btn-primary">Submit</button>
+					</form>
+				</section>
+			</div>
 
+			<div class="col-xs-12 col-sm-12 col-md-3">
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<div id="connect">
+					<h1 id="connect-title">Connect With Me</h1>
+					<hr id="hr3">
+					<ul id="links2">
+						<li><a href="https://www.github.com/coop741"> 
+							<img class="imageLinks" src="images/if_github_401441.png" alt="github"></a> </li>
 
-			
-		</section>
-
-		<section id="connect">
-			<h1 id="connect-title">Connect With Me</h1>
-			<hr id="hr3">
-			<ul id="links2">
-				<li><a href="https://www.github.com/coop741"> 
-					<img src="images/if_github_401441.png" alt="github" style="width:40px; height:40px; border:0;"></a> </li>
-
-					<li><a href="https://www.linkedin.com/in/trentcooper741/">
-						<img src="images/if_square-linkedin_317725.png" alt="LinkedIn" style="width:40px; height:40px; border:0;"></a></li>
+						<li><a href="https://www.linkedin.com/in/trentcooper741/">
+							<img class="imageLinks" src="images/if_square-linkedin_317725.png" alt="LinkedIn"></a></li>
 
 						<li><a href="https://stackoverflow.com/users/8352102/coop741">
-							<img src="images/if_stackoverflow_273179.png" alt="StackOverflow" style="width:40px; height:40px; border:0;"></a></li>
-						</ul>
-					</section>
+							<img class="imageLinks" src="images/if_stackoverflow_273179.png" alt="StackOverflow"></a></li>
+					</ul>
 				</div>
+			</div>
+		</div>
 
-				<hr id="hr4">
+		<div class="row">
+			<div class="col-xs-12">
+				<div id="hr4"></div>
+			</div>
+		</div>
 
-				<div class="footer">
-					<p>&copy; Copyright 2017 Trent Cooper</p>
-				</div>
-
-
-
-
-
-
-
-
-
-
-
-
-			</body>
-			</html>
+		<div class="footer">
+			<p>&copy; Copyright 2017 Trent Cooper</p>
+		</div>
+</body>
+</html>
