--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
-	<!-- <link rel="stylesheet" type="text/css" href="resetCSS.css"> -->
+	<link rel="stylesheet" type="text/css" href="css/resetCSS.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
@@ -75,7 +75,7 @@
 				</section>
 			</div>
 
-			<div class="col-xs-12 col-sm-12 col-md-4">
+			<div class="col-xs-12 col-sm-12 col-md-3">
 				<br>
 				<br>
 				<br>
@@ -99,7 +99,12 @@
 			</div>
 		</div>
 
-		<hr id="hr4">
+		<div class="row">
+			<div class="col-xs-12">
+				<div id="hr4"></div>
+			</div>
+		</div>
+
 
 		<div class="footer">
 			<p>&copy; Copyright 2017 Trent Cooper</p>
